<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/terms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:ignore="UselessParent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/term_title"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_1"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_2"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_3"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_4"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_5"
            android:layout_marginBottom="10dp"
            />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/term_6"
        android:layout_marginBottom="10dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_7"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_8"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/term_9"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/accept"
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/term_accept"/>

    </LinearLayout>

</ScrollView>