<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/transparent"
            android:textSize="12sp"
            android:text="@string/setting_system"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:textColor="@color/text_dark_gray"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chose_language"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/setting_content"
                    android:text="@string/setting_c_language"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:background="#d1d0d0"
                    android:textSize="0.1dip"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/bg_white"
            android:textSize="12sp"
            android:text="@string/setting_config"
            android:paddingLeft="8dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/text_dark_gray"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/dim_content"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="@style/setting_content"
                        android:text="@string/setting_config_dim_time"/>

                    <com.rey.material.widget.Slider
                        android:id="@+id/dim_slider"
                        style="@style/Material.Widget.Slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="40dp"
                        app:sl_primaryColor="@color/colorPrimary"
                        app:sl_minValue="0"
                        app:sl_maxValue="5"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:background="#d1d0d0"
                    android:textSize="0.1dip"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
